Fixes for points table on small screen, draggable bid container

--- a/client/styles/app.css
+++ b/client/styles/app.css
@@ -160,6 +160,15 @@ body{
 	font-weight: bold;
 }
 
+.bidContainerOverlay .bidContainer .drag-icon{
+	color: #adacac;
+}
+
+.bidContainerOverlay .bidContainer.enable-drag .drag-icon{
+	color: #ffe203;
+}
+
+
 .bidContainerOverlay .bidContainer .bids{
 	margin: 3px 3px 0px 3px;
 	background-color: #337ab7; 
@@ -516,8 +525,10 @@ body{
 	border-bottom: 1px Solid #dcdcdc;
 }
 
-#board-screen .points-table-container .points-table .row.header-row{
-	background-color: #ff9900
+#board-screen .points-table-container .points-table .row.header-row,
+#board-screen .points-table-container .points-table .row.header-row div[class^=col-]{
+	background-color: #ff9900;
+	color: #00008b;
 }
 
 #board-screen .points-table-container .points-table .row.total-row{ 
@@ -525,7 +536,8 @@ body{
 }
 
 #board-screen .points-table-container .points-table .row div[class^=col-]{
-	min-height: 0px;
+	height: auto;
+	padding: 5px;
 }
 
 #board-screen div.player-card .player-card-footer {
